@@ -3,7 +3,7 @@
     <type>org.netbeans.modules.python.project</type>
     <configuration>
         <data xmlns="http://nbpython.dev.java.net/ns/php-project/1">
-            <name>irrb25</name>
+            <name>irrb26</name>
             <sources>
                 <root id="io.dir"/>
                 <root id="ui.dir"/>
