@@ -1,4 +1,8 @@
 --- version 0.5 (xx/xx/2010) ---
+Added an option to override the base directory for relative references:
+iConfig.ScriptOptions.baseDir.  The default value '.' will use the
+scene directory.  
+
 Added an option (iConfig.ScriptOptions.copyExternalImages) to copy external images 
 to the irrb destination texture directory.  Default is set to True.
 
